[package]
name = "snappy"
version = "0.3.0"
authors = ["Nick Frasser <nick@nfrasser.com>"]
description = "snappy compression/decompression for browsers and Node.js, powered by WebAssembly"
repository = "https://github.com/nfrasser/snappy.git"
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
wasm-bindgen = "0.2.92"
snap = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
lto = true
strip = "symbols"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ['--enable-simd']
[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['--enable-simd']
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['--enable-simd']
